# goldilocks

./: .gitignore  Cargo.toml
src/: fp.rs  fp2.rs  lib.rs  tests.rs  util.rs
